--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="2l_aOvjPSxz0COzuNM7qHL-RoILifYornwYWmKkOWTo" />
     <title>Akshat Hatwal || Portfolio</title>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.16/dist/lenis.css">
     <link rel="stylesheet" href="style/style.css">
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1"></script>
+    
 </head>
 <body>
     <div class="section" id="home">
