--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Master Web Developer to Change The Game Forever, a developer with 5 years of experience, hopefully we can work together.">
     <meta name="google-site-verification" content="2l_aOvjPSxz0COzuNM7qHL-RoILifYornwYWmKkOWTo" />
     <title>Akshat Hatwal || Portfolio</title>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.16/dist/lenis.css">
